--- a/cv.html
+++ b/cv.html
@@ -91,13 +91,13 @@
                     <div>
                         <img src="uk_img.png" alt="Flag">
                         <br>
-                        <p class="lang">Angielski<br>
-                            Upper-Intermediate</p>
+                        <p class="lang">Angielski</p>
+                            <span>Upper-Intermediate</span>
                     </div>
                     <div>
                         <img src="pl_img.png" alt="Flag">
-                        <p class="lang">Polski<br>
-                            Ojczysty</p>
+                        <p class="lang">Polski</p>
+                           <span>Ojczysty</span>
                     </div>
                 </div>
 
