--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
     <title>CV Patryk Binicki</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
     <link rel="Stylesheet" href="style.css">
 
 </head>
@@ -92,12 +92,12 @@
                         <img src="uk_img.png" alt="Flag">
                         <br>
                         <p class="lang">Angielski</p>
-                            <span>Upper-Intermediate</span>
+                        <span>Upper-Intermediate</span>
                     </div>
                     <div>
                         <img src="pl_img.png" alt="Flag">
                         <p class="lang">Polski</p>
-                           <span>Ojczysty</span>
+                        <span>Ojczysty</span>
                     </div>
                 </div>
 
@@ -105,7 +105,10 @@
 
             </div>
             <div class="rodo">
-                Wyarażam na przetwarzanie moich danych bezdomnym
+                <p>Wyrażam zgodę na przetwarzanie danych osobowych zawartych
+                    w mojej aplikacji przez (nazwa firmy) na potrzebny przyszłych precesów
+                    rekrutacyji, w tym również na inne stanowiska.
+                </p>
             </div>
         </div>
 
