--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,7 @@
             <div class="myPersonalData">
                 <h2>O mnie</h2>
 
-                <p class="aboutMe">Jestem studentem czwartego roku
+                <p class="aboutMe">Jestem absolwentem
                     studiów niestacjonarnych inżynierskich
                     na kierunku informatyka.<br>
                     Jestem osobą komunikatywną,
@@ -35,16 +35,19 @@
 
                 <h2>Kontakt</h2>
 
-                <p class="aboutMe">Kościerzyce 153/1,<br>
-                    49-314 Kościerzyce,<br>
+                <p class="aboutMe">DomyślnaMiejscowość 111/1,<br>
+                    11-111 Domyślna,<br>
                     Opolskie, Polska<br><br>
-                    <a href="mailto:pbinicki@gmail.com">pbinicki@gmail.com</a><br><br>
-                    <a href="tel:+48725180753">+48 725 180 753</a></p><br>
+                    <a href="mailto:pbinicki@gmail.com">mojapoczta@mail.com</a><br><br>
+                    <a href="tel:+48111111111">+48 111 111 111</a></p><br>
 
                 <h2>Umiejętności</h2>
                 <p class="aboutMe"> C#<br><br>
                     JavaScript<br><br>
-                    HTML5, CSS</p>
+                    HTML5, CSS, SASS<br><br>
+                    ASP.NET Core MVC<br><br>
+                    GIT
+                </p>
             </div>
         </aside>
         <div class="rightSide">
@@ -76,7 +79,7 @@
 
                 <h3>Inżynier Informatyk
                     <span>
-                        Politechnika Opolska (Październik 2015 - Obecnie)</span></h3>
+                        Politechnika Opolska (Październik 2015 - Czerwiec 2019)</span></h3>
 
                 <h2>Zainteresowania</h2>
 
@@ -107,7 +110,7 @@
             <div class="rodo">
                 <p>Wyrażam zgodę na przetwarzanie danych osobowych zawartych
                     w mojej aplikacji przez (nazwa firmy) na potrzebny przyszłych precesów
-                    rekrutacyji, w tym również na inne stanowiska.
+                    rekrutacji, w tym również na inne stanowiska.
                 </p>
             </div>
         </div>
