Upgrade skill view

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
     <link rel="Stylesheet" href="style.css">
+    <link rel="Stylesheet" href="fontello/css/fontello.css">
 
 </head>
 
@@ -42,12 +43,55 @@
                     <a href="tel:+48111111111">+48 111 111 111</a></p><br>
 
                 <h2>Umiejętności</h2>
-                <p class="aboutMe"> C#<br><br>
-                    JavaScript<br><br>
-                    HTML5, CSS, SASS<br><br>
-                    ASP.NET Core MVC<br><br>
-                    GIT
-                </p>
+                <ul class="skills">
+                    <li>C#
+                        <div class ="wraper">
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle active-color"></div>
+                        <div class="circle active-color"></div>
+                        <div class="circle active-color"></div>
+                        </div>
+                    </li>
+                    <li>JavaScript, SQL
+                            <div class ="wraper">
+                                    <div class="circle"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    </div>
+            
+                    </li>
+                    <li>HTML5, CSS, SASS
+                            <div class ="wraper">
+                                    <div class="circle"></div>
+                                    <div class="circle"></div>
+                                    <div class="circle"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    </div>
+                    </li>
+                    <li>ASP.NET Core MVC
+                            <div class ="wraper">
+                                    <div class="circle"></div>
+                                    <div class="circle"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    </div>
+                    </li>
+                    <li>GIT
+                            <div class ="wraper">
+                                    <div class="circle"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    <div class="circle active-color"></div>
+                                    </div>
+                    </li>
+                </ul>
+                
             </div>
         </aside>
         <div class="rightSide">
@@ -84,7 +128,7 @@
                 <h2>Zainteresowania</h2>
 
                 <ul class="intrests">
-                    <li>Nowe technologie</li>
+                    <li>Nowe technologie</li> 
                     <li>Programowanie</li>
                     <li>Sport</li>
                 </ul>
@@ -109,7 +153,7 @@
             </div>
             <div class="rodo">
                 <p>Wyrażam zgodę na przetwarzanie danych osobowych zawartych
-                    w mojej aplikacji przez (nazwa firmy) na potrzebny przyszłych precesów
+                    w mojej aplikacji na potrzebny przyszłych precesów
                     rekrutacji, w tym również na inne stanowiska.
                 </p>
             </div>
